--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
@@ -40,5 +41,5 @@ next-env.d.ts
 
 /Backups
 /Backups/*
-/app/api
-middleware.js
+# /app/api
+# middleware.js
