--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
+		"@react-pdf/renderer": "^3.4.4",
 		"@reduxjs/toolkit": "^2.2.6",
 		"@tanstack/react-table": "^8.19.3",
 		"@types/node": "20.5.7",
@@ -30,6 +31,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@types/react-redux": "^7.1.33",
 		"autoprefixer": "10.4.19",
+		"axios": "^1.7.3",
 		"bcrypt": "^5.1.1",
 		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
